# hardhat-polkadot

./: .gitignore  .prettierignore  .prettierrc  CODEOWNERS  CONTRIBUTING.md  README.md  RELEASE.md  checksums.txt  empty.ts  eslint.config.mjs  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json
.github/: dependabot.yaml  semantic.yml
.github/ISSUE_TEMPLATE/: config.yaml
.github/workflows/: ai-reviews-pr.yml  compile-nodes.yml  lint.yml  npm-release.yml  release-anvil-polkadot-nodes.yml  release-dev-node.yml  release-nodes.yml  tests.yml
config/eslint/: eslintrc.js
config/typescript/: tsconfig.json
examples/: README.md  anvil.config.ts  asm.config.ts  combinedJson.config.ts  forkWithAdapter.config.ts  forkWithoutAdapter.config.ts  localNode.config.ts  npm.config.ts  npmWithoutOptimization.config.ts  remixWithoutOptimization.config.ts  yul.config.ts
examples/all-polkavm-networks/: hardhat.config.ts  package.json
examples/console-debug-example/: README.md  hardhat.config.js  package.json
examples/forking/: .gitignore  hardhat.config.ts  package.json
examples/node-example/: .eslintrc.js  .gitignore  hardhat.config.ts  package.json
examples/only-polkavm-networks/: README.md  hardhat.config.ts  package-lock.json  package.json
examples/using-docker/: hardhat.config.ts
examples/using-xcm/: .gitignore  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
examples/with-evm-networks/: .gitignore  hardhat.config.ts  package-lock.json  package.json
examples/with-other-networks/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
examples/with-polkavm-networks/: hardhat.config.ts  package-lock.json  package.json
scripts/: build-console-docker.sh
substrate-console-precompile/: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh
substrate-console-precompile/benches/: console_benchmark.rs
substrate-console-precompile/src/: lib.rs
tests/: check-tarballs.sh  helpers.sh  run.sh
tests/console-precompile/: ConsoleTest.sol  console.test.ts  integration.test.ts
tests/e2e/: 1-compile.test.sh  1-test-in-memory.test.sh  1-test.test.sh  2-deploy-in-node.test.sh  2-deploy-local.test.sh  2-test.test.sh  3-deploy-live.test.sh  3-deploy-local.test.sh  3-forking.test.sh  3-test-cli-basic.test.sh  4-deploy-live.test.sh  compile.test.sh  test.test.sh
tests/fixture-projects/: basic-compile.config.js  basic-test-and-deploy.config.js  forking.config.js  multiple-compile.config.js  simple-local-test-deploy.config.js  test-without-node.config.js
tests/unit/: compile.test.sh  (+2 more)
(+41 files in other folders)
